--- a/src/css/style.njk
+++ b/src/css/style.njk
@@ -2,8 +2,9 @@
 permalink: css/style.css
 ---
 {% include "./_fonts.css" %}
-{% include "./_resets.css" %}
 {% include "./_tokens.css" %}
+{% include "./_colors.css" %}
+{% include "./_resets.css" %}
 {% include "./_globals.css" %}
 {% include "./_layouts.css" %}
 {% include "./components/_buttons.css" %}
