--- a/src/_includes/layouts/story.njk
+++ b/src/_includes/layouts/story.njk
@@ -2,8 +2,8 @@
 {% block content %}
     <div class="story-with-sidebar" data-layout="with-sidebar" data-props="side:left">
         <aside data-layout="stack">
-            {# <a aria-hidden data-heading="5" href="/">{{ meta.site_name }}</a> #}
-            <nav data-layout="stack">
+            <span data-heading="5" id="story-toc">Table of contents</span>
+            <nav aria-labelledby="story-toc" data-layout="stack">
                 <a href="#summary">Overview</a>
                 <a href="#reference">Further reading</a>
                 <a href="#related">Related</a>
