--- a/src/pages/home-page.njk
+++ b/src/pages/home-page.njk
@@ -7,6 +7,7 @@ pagination:
     alias: entries
 tags: 
     - pages
+permalink: /
 ---
 {% set entries = entries %}
 {% set nextStory = collections.stories | getNextCollectionItem(pagination.page) %}
