--- a/src/_includes/layouts/story.njk
+++ b/src/_includes/layouts/story.njk
@@ -1,9 +1,9 @@
 {% extends "layouts/base.njk" %}
 {% block content %}
     <div class="story-with-sidebar" data-layout="with-sidebar" data-props="side:left">
-        <aside data-layout="stack">
-            <span data-heading="5" id="story-toc">Table of contents</span>
+        <aside>
             <nav aria-labelledby="story-toc" data-layout="stack">
+            <span data-heading="5" id="story-toc">Table of contents</span>
                 <a href="#summary">Overview</a>
                 <a href="#reference">Further reading</a>
                 <a href="#related">Related</a>
@@ -13,5 +13,4 @@
             {{ content | safe }}
         </article>
     </div>
-    {# </article> #}
 {% endblock %}
