--- a/src/_includes/partials/site-header.njk
+++ b/src/_includes/partials/site-header.njk
@@ -1,8 +1,7 @@
 <header>
-    <div aria-hidden="true" class="header-bg"></div>
-    <div class="header">
-    <a data-heading="5" href="/" aria-label="Front Stories">
-        {{meta.site_name + " - " + title}}
-    </a>
+    <div class="header" data-layout="cluster" data-pros="y:center">
+        <a data-heading="5" href="/" aria-label="Front Stories">
+            {{meta.site_name}}
+        </a>
     </div>
 </header>
