--- a/src/css/_globals.css
+++ b/src/css/_globals.css
@@ -7,68 +7,65 @@ html {
   scroll-behavior: smooth;
 }
 body {
-    font-family: "Roboto Serif", Verdana, Geneva, Tahoma, sans-serif;
-    font-size: var(--step-0);
-    background-color: var(--color-light);
-  }
-  h1,
-  h2,
-  h3 {
-    line-height: 1;
-    max-width: 40ch;
-    font-weight: 400;
-    text-transform: capitalize;
-  }
-  h1,
-  [data-heading~="1"] {
-    font-size: var(--step-5);
-  }
-  h2,
-  [data-heading~="2"] {
-    font-size: var(--step-4);
-  }
-  h3,
-  [data-heading~="3"] {
-    font-size: var(--step-3);
-  }
-  h4,
-  [data-heading~="4"] {
-    font-size: var(--step-2);
-  }
-  h5,
-  [data-heading~="5"] {
-    font-size: var(--step-1);
-  }
-  h6,
-  [data-heading~="6"] {
-    font-size: var(--step-0);
-  }
-  /* p,
+  font-family: "Roboto Serif", Verdana, Geneva, Tahoma, sans-serif;
+  font-size: var(--step-0);
+  background-color: var(--color-light);
+}
+h1,
+h2,
+h3 {
+  line-height: 1;
+  max-width: 40ch;
+  font-weight: 400;
+  text-transform: capitalize;
+}
+h1,
+[data-heading~="1"] {
+  font-size: var(--step-5);
+}
+h2,
+[data-heading~="2"] {
+  font-size: var(--step-4);
+}
+h3,
+[data-heading~="3"] {
+  font-size: var(--step-3);
+}
+h4,
+[data-heading~="4"] {
+  font-size: var(--step-2);
+}
+h5,
+[data-heading~="5"] {
+  font-size: var(--step-1);
+}
+h6,
+[data-heading~="6"] {
+  font-size: var(--step-0);
+}
+p,
   li {
     max-width: var(--measure);
-  } */
-  
-  ::-webkit-scrollbar {
-    width: 10px;
   }
-  
-  /* Track */
-  ::-webkit-scrollbar-track {
-    background: var(--gray-300);
-    border-radius: 5px;
-  }
-  
-  /* Handle */
-  ::-webkit-scrollbar-thumb {
-    background: var(--gray-900);
-    border-radius: 5px;
-  }
-  
-  /* Handle on hover */
-  ::-webkit-scrollbar-thumb:hover {
-    background: var(--gray-700);
-  }
-  
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+/* Track */
+::-webkit-scrollbar-track {
+  background: var(--gray-300);
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: var(--gray-900);
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: var(--gray-700);
+}
+
 /* a {
   text-decoration: none;
 }
@@ -79,23 +76,25 @@ a {
   text-decoration: none;
 }
 
-
 ul[role="list"],
 ol[role="list"] {
   list-style: none;
 }
 
-
 :root {
-    --page-top: 12rem;
-    --header-height: var(--space-xl-2xl);
-    --layer-header: 3;
-    --responsive-padding: var(--space-s-3xl);
-    --alpha: rgba(255, 255, 255, 0.7);
-  }
+  --page-top: 12rem;
+  --header-height: var(--space-xl-2xl);
+  --layer-header: 3;
+  --responsive-padding: var(--space-s-3xl);
+  --alpha: rgba(255, 255, 255, 0.7);
+}
 main,
 .header,
 .footer {
   padding-left: var(--responsive-padding);
   padding-right: var(--responsive-padding);
+}
+
+:where(button, a):where(:not(:active)):focus-visible {
+  outline-offset: 5px;
 }
