--- a/src/css/style.njk
+++ b/src/css/style.njk
@@ -9,4 +9,4 @@ permalink: css/style.css
 {% include "./_layouts.css" %}
 {% include "./components/_buttons.css" %}
 {% include "./components/_tags.css" %}
-{# {% include "./_main.css" %} #}
+{% include "./_main.css" %}
