--- a/src/pages/categories/categories-page.njk
+++ b/src/pages/categories/categories-page.njk
@@ -1,7 +1,9 @@
 ---
-layout: layouts/home.njk
+title: Categories
+layout: layouts/base.njk
+tags: 
+    - webpage
 permalink: /categories/
-tags: pages
 ---
 <div data-layout="cluster">
     {%- for category in collections.categories %}
