--- a/src/_includes/partials/site-footer.njk
+++ b/src/_includes/partials/site-footer.njk
@@ -16,7 +16,7 @@
     <div data-layout="stack" data-props="x:start">
         <h3 data-heading="5">Pages</h3>
         <div data-layout="stack" data-props="x:start">
-            {%- for page in collections.pages %}
+            {%- for page in collections.webpage %}
                 <a href="{{page.url}}" >{{ page.data.title }}</a>
             {% endfor -%}
         </div>
