--- a/src/_includes/partials/site-head.njk
+++ b/src/_includes/partials/site-head.njk
@@ -3,7 +3,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ meta.site_name + " - " + title }}</title>
-    <meta name="description" content="{{meta.description}}">
+    <meta name="description" content="{{meta.site_description}}">
     <link rel="stylesheet" href="/css/style.css">
     <meta name="theme-color" content="{{meta.theme_color}}">
     <meta name="apple-mobile-web-app-status-bar-style" content="{{meta.theme_color}}">
@@ -13,7 +13,7 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="{{meta.site_url}}">
     <meta property="og:title" content="{{title}}">
-    <meta property="og:description" content="{{meta.description}}">
+    <meta property="og:description" content="{{meta.site_description}}">
     <!-- Open graph - Twitter -->
     <meta name="twitter:image" content="{{meta.site_thumbnail}}">
     <meta name="twitter:card" content="summary_large_image">
@@ -22,21 +22,21 @@
     <meta name="twitter:text:title" content="{{meta.title}}">
     {# <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>{{meta.site_emoji if meta.site_emoji else '👀'}}</text></svg>"> #}
 
-        <!-- favicons -->
+    <!-- favicons -->
     <link rel="shortcut icon" href="images/logos/favicon-16x16.png" type="image/x-icon" sizes="16x16" />
     <link rel="shortcut icon" href="images/logos/favicon-32x32.png" type="image/x-icon" sizes="32x32" />
-
     <!-- iOS 7 or prior (legacy) -->
     <link rel="apple-touch-icon" sizes="144x144" href="images/logos/apple-touch-icon-144x144.png">
     <link rel="apple-touch-icon" sizes="114x114" href="images/logos/apple-touch-icon-114x114.png">
     <link rel="apple-touch-icon" sizes="72x72" href="images/logos/apple-touch-icon-72x72.png"> 
     <link rel="apple-touch-icon" sizes="57x57" href="images/logos/apple-touch-icon-57x57.png">
-
-    
     <!-- iOS 8 and later -->
     <link rel="apple-touch-icon" sizes="180x180" href="images/logos/apple-touch-icon-180x180.png">
     <link rel="apple-touch-icon" sizes="152x152" href="images/logos/apple-touch-icon-152x152.png">
     <link rel="apple-touch-icon" sizes="120x120" href="images/logos/apple-touch-icon-120x120.png">
     <link rel="apple-touch-icon" sizes="76x76" href="images/logos/apple-touch-icon-76x76.png">
     <link rel="apple-touch-icon" sizes="60x60" href="images/logos/apple-touch-icon-60x60.png">
+    {# Author etc #}
+    <meta name="author" content="{{meta.site_author}}">
+
 </head>
