--- a/src/_includes/partials/story-card-entry.njk
+++ b/src/_includes/partials/story-card-entry.njk
@@ -1,9 +1,9 @@
-<li class="story-card" data-layout="stack" data-props="">
-    <a class="story-card__title" data-props="split"  href="/stories/{{ entry.name | slugify }}">{{ entry.name }}</a>
+<li class="story-card" data-layout="stack">
+    <a data-link class="story-card__title" data-props="split"  href="/stories/{{ entry.name | slugify }}">{{ entry.name }}</a>
     {% if entry.categories.length %}
-        <div class="story-card__categories" data-layout="cluster " >
+        <div class="story-card__categories" data-layout="cluster" >
             {%- for category in entry.categories %}
-                <a href="/categories/{{category.name | slugify}}" data-tag>{{ category.name }}</a>
+                <a  href="/categories/{{category.name | slugify}}" data-tag>{{ category.name }}</a>
             {% endfor -%}
         </div>
     {% endif %}
