--- a/src/css/components/_buttons.css
+++ b/src/css/components/_buttons.css
@@ -1,5 +1,6 @@
 [data-button] {
   --minimum-height: 46px;
+  --border-radius: var(--space-2xs);
   padding: var(--space-xs) var(--space-m);
   border-radius: var(--border-radius);
   min-height: var(--minimum-height);
@@ -10,6 +11,8 @@
   color: var(--gray-900);
   background-color: var(--gray-100);
   cursor: pointer;
+  border-style: solid;
+  border-width: var(--border-thin, 1px);
 }
 [data-button]:hover {
   background-color: var(--gray-200);
@@ -17,7 +20,7 @@
 [data-button~="active"],
 [data-button]:active {
   background-color: var(--gray-900);
-    color: var(--gray-100);
+  color: var(--gray-100);
 }
 [data-button~="disabled"],
 [data-button]:disabled {
