--- a/src/css/_fonts.css
+++ b/src/css/_fonts.css
@@ -52,3 +52,8 @@
          url('../fonts/roboto-serif-v7-latin-700.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
          url('../fonts/roboto-serif-v7-latin-700.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
   }
+
+:root{
+     --serif-font: 'Roboto Serif', serif;
+     --sans-font: Verdana, Geneva, Tahoma, sans-serif;
+}
