--- a/src/css/_globals.css
+++ b/src/css/_globals.css
@@ -7,13 +7,13 @@ html {
   scroll-behavior: smooth;
 }
 body {
-  font-family: "Roboto Serif", Verdana, Geneva, Tahoma, sans-serif;
+  font-family: var(--serif-font);
   font-size: var(--step-0);
   background-color: var(--color-light);
 }
 h1,
 h2,
-h3 {
+h3, h4, h5, h6 {
   line-height: 1;
   max-width: 40ch;
   font-weight: 400;
@@ -97,4 +97,12 @@ main,
 
 :where(button, a):where(:not(:active)):focus-visible {
   outline-offset: 5px;
+}
+
+.visually-hidden {
+  position: absolute !important;
+  width: 1px !important;
+  height: 1px !important;
+  overflow: hidden !important;
+  clip: rect(1px, 1px, 1px, 1px) !important;
 }
