--- a/src/pages/categories/categories-page.njk
+++ b/src/pages/categories/categories-page.njk
@@ -1,6 +1,6 @@
 ---
 title: Categories
-layout: layouts/base.njk
+layout: layouts/categories-layout.njk
 tags: 
     - webpage
 permalink: /categories/
