--- a/src/_includes/partials/site-header.njk
+++ b/src/_includes/partials/site-header.njk
@@ -1,7 +1,15 @@
 <header>
-    <div class="header" data-layout="cluster" data-pros="y:center">
+    <div class="header" data-layout="cluster" data-props="y:center x:between">
         <a data-heading="5" href="/" aria-label="Front Stories">
             {{meta.site_name}}
+        </a>
+        <a data-button="small" data-props="noBorder" href="#">
+            <span aria-hidden="true">
+                🔎
+            </span>
+            <span>
+                Search
+            </span>
         </a>
     </div>
 </header>
