--- a/src/_includes/partials/story-card-entry.njk
+++ b/src/_includes/partials/story-card-entry.njk
@@ -1,4 +1,4 @@
-<li class="story-card" data-layout="stack">
+<li class="story-card" data-layout="box stack">
     <a data-link class="story-card__title" data-props="split"  href="/stories/{{ entry.name | slugify }}">{{ entry.name }}</a>
     {% if entry.categories.length %}
         <div class="story-card__categories" data-layout="cluster" >
