--- a/src/css/_tokens.css
+++ b/src/css/_tokens.css
@@ -12,6 +12,7 @@
   --step-6: clamp(2.03rem, calc(0.21rem + 9.06vw), 7.01rem);
 
   /* @link https://utopia.fyi/space/calculator/?c=320,16,1.125,1200,20,1.333,6,1,&s=0.75,1.5%7C2%7C3%7C4%7C5,m-2xl%7Cs-3xl */
+  --space-2xs: clamp(0.50rem, calc(0.45rem + 0.23vw), 0.63rem);
   --space-xs: clamp(0.75rem, calc(0.68rem + 0.34vw), 0.94rem);
   --space-s: clamp(1rem, calc(0.91rem + 0.45vw), 1.25rem);
   --space-m: clamp(1.5rem, calc(1.36rem + 0.68vw), 1.88rem);
