--- a/src/pages/home-page.njk
+++ b/src/pages/home-page.njk
@@ -7,14 +7,26 @@ permalink: /
 ---
 
 <article data-layout="stack" data-props="space:l">
-    <h1>Frontend Stories</h1>
-    {# <section data-layou="stack">
-        <h2 data-heading="4">Recently added</h2>
+    <section data-layout="cover" data-props="noPad">
+        <h1>Frontend Stories</h1>
+        <p>{{ meta.site_description }}</p>
+        <div>
+            <a data-button="variant:primary" href="/categories">Browse all categories</a>
+        </div>
+    </section>
+    <section data-layou="stack">
+        <div data-layout="cluster" data-props="x:between y:center">
+            <h2 data-heading="4">How to write effective web content ?</h2>
+            <a data-link href="/categories/effective-web-content/">
+                See more
+                <span aria-hidden="true">👁</span>
+            </a>
+        </div>
         <ul data-layout="reel" data-props="noBorder">
             {% set entries = stories | limitTo(6) %}
             {%- for entry in entries %}
                 {% include "partials/story-card-entry.njk" %}
             {% endfor -%}
         </ul>
-    </section> #}
+    </section>
 </article>
