--- a/src/_includes/partials/site-header.njk
+++ b/src/_includes/partials/site-header.njk
@@ -7,7 +7,7 @@
             <span aria-hidden="true">
                 🔎
             </span>
-            <span>
+            <span class="visually-hidden">
                 Search
             </span>
         </a>
